Implemented object scaling and camera movement
object scaling Implemented and
camera movement 90% finished

--- a/ComponentFramework3.0/ComponentFramework/ComponentFramework.vcxproj
+++ b/ComponentFramework3.0/ComponentFramework/ComponentFramework.vcxproj
@@ -86,6 +86,7 @@
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Debug.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Mesh.h" />
