--- a/ComponentFramework3.0/ComponentFramework/ComponentFramework.vcxproj.filters
+++ b/ComponentFramework3.0/ComponentFramework/ComponentFramework.vcxproj.filters
@@ -119,6 +119,9 @@
     <ClInclude Include="GameObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="phongFrag.glsl">
