added to gitnore
added browse.vc

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ Plugins//Intermediate/
 
 # Cache files for the editor to use
 DerivedDataCache/*
+ComponentFramework3.0/.vs/ComponentFramework/v15/Browse.VC.db
