--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ ComponentFramework3.0/ComponentFramework/Debug/Window.obj
 ComponentFramework3.0/Debug/ComponentFramework.lib
 ComponentFramework3.0/Debug/glew32.dll
 ComponentFramework3.0/Debug/SDL2.dll
+ComponentFramework3.0/.vs/ComponentFramework/v15/Browse.VC.opendb
+ComponentFramework3.0/.vs/ComponentFramework/v15/Browse.VC.db
