--- a/ComponentFramework3.0/ComponentFramework/ComponentFramework.vcxproj
+++ b/ComponentFramework3.0/ComponentFramework/ComponentFramework.vcxproj
@@ -87,6 +87,7 @@
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Debug.h" />
     <ClInclude Include="FileManager.h" />
     <ClInclude Include="GameObject.h" />
