--- a/ComponentFramework3.0/ComponentFramework/ComponentFramework.vcxproj.filters
+++ b/ComponentFramework3.0/ComponentFramework/ComponentFramework.vcxproj.filters
@@ -128,6 +128,9 @@
     <ClInclude Include="json.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="phongFrag.glsl">
