Major change at GUI feature

--- a/ComponentFramework3.0/ComponentFramework/imgui.ini
+++ b/ComponentFramework3.0/ComponentFramework/imgui.ini
@@ -9,7 +9,7 @@ Size=287,556
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=694,15
+Pos=718,1
 Size=550,680
 Collapsed=0
 
@@ -19,8 +19,8 @@ Size=520,600
 Collapsed=0
 
 [Window][Editor Menu]
-Pos=3,13
-Size=315,263
+Pos=6,1
+Size=267,136
 Collapsed=0
 
 [Window][About Dear ImGui]
@@ -34,7 +34,12 @@ Size=32,35
 Collapsed=0
 
 [Window][Another Window]
-Pos=348,9
-Size=286,128
+Pos=8,363
+Size=270,243
+Collapsed=0
+
+[Window][Control Window]
+Pos=14,151
+Size=212,208
 Collapsed=0
 
