--- a/ComponentFramework3.0/ComponentFramework/ComponentFramework.vcxproj
+++ b/ComponentFramework3.0/ComponentFramework/ComponentFramework.vcxproj
@@ -73,6 +73,7 @@
     <ClCompile Include="FileManager.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameSceneManager.cpp" />
+    <ClCompile Include="JSONFile.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Model0.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -92,6 +93,7 @@
     <ClInclude Include="FileManager.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="json.hpp" />
+    <ClInclude Include="JSONFile.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="GameSceneManager.h" />
