--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ ComponentFramework3.0/Debug/glew32.dll
 ComponentFramework3.0/Debug/SDL2.dll
 ComponentFramework3.0/.vs/ComponentFramework/v15/Browse.VC.opendb
 ComponentFramework3.0/.vs/ComponentFramework/v15/Browse.VC.db
+ComponentFramework3.0/.vs/ComponentFramework/v15/.suo
+ComponentFramework3.0/.vs/ComponentFramework/v15/Browse.VC.db
+ComponentFramework3.0/.vs/ComponentFramework/v15/.suo
+ComponentFramework3.0/.vs/ComponentFramework/v15/Browse.VC.db
