Added Ray-OBB Object Selection

--- a/ComponentFramework3.0/ComponentFramework/ComponentFramework.vcxproj.filters
+++ b/ComponentFramework3.0/ComponentFramework/ComponentFramework.vcxproj.filters
@@ -93,6 +93,12 @@
     <ClCompile Include="ImGui\imgui_impl_sdl.cpp">
       <Filter>Resource Files\ImGui</Filter>
     </ClCompile>
+    <ClCompile Include="FileManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="JSONFile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Debug.h">
@@ -175,6 +181,18 @@
     </ClInclude>
     <ClInclude Include="ImGui\imgui_impl_sdl.h">
       <Filter>Resource Files\ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="FileManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="json.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="JSONFile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TestPicker.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
